squidguard (1.5-3) UNRELEASED; urgency=medium

  * debian/control:
    - Bump Standards-Version to 3.9.5 (no changes).
  * debian/rules:
    - add again hardened flags through dpkg-buildflags. Closes: #760726
  * Fix compiler warnings in y.tab.c.bison, sg.y.in (add -DLDAP_DEPRECATED)
  * Fix compiler warnings in sgDiv.c.in (better sprintf formatting).

 -- Joachim Wiedorn <ad_debian@joonet.de>  Sat, 20 Sep 2014 10:30:28 +0200

squidguard (1.5-2) unstable; urgency=low

  * Fix small typo in update-squidguard.
  * Add new pt_BR debconf translation. Closes: #677796
  * Add missing babel files (for cgi scripts). Closes: #736478
  * debian/control:
    - Bump Standards-Version to 3.9.4 (no changes).
    - Move to debhelper >=9 and compat level 9.
  * Update debian/rules, because hardening is always enabled.

 -- Joachim Wiedorn <ad_debian@joonet.de>  Fri, 24 Jan 2014 21:34:05 +0100

squidguard (1.5-1) unstable; urgency=low

  * New upstream release.
  * Add option for BDB check in update-squidguard.
  * Add BDB check in postinst script.
  * Add info about BDB check in README.Debian.
  * Update manpage of update-squidguard.
  * Delete default database directory in postrm script. (Closes: #668716)
  * Split documentation in 'doc' and 'html' in -doc package.

  * Use always /etc/squidguard directory for config file.
  * Store example config as /etc/squidguard/squidguard.conf.default.
  * Check for database files and update paths in update-squidguard.
  * Do not override existing config file while upgrading package.
  * Update of postinst and postrm scripts.
  * Add hints in the files NEWS and README.Debian.
  * Update all manual pages made for Debian.
  * Add example for destination configuration: dest-snippet.txt.

  * Add script to fetch new database: squidguard-data.
  * Add script to add filter to squid/squid3: add-sg-to-squid.
  * Add script to delete filter from squid/squid3: del-sg-from-squid.
